--- a/.github/workflows/automation.yaml
+++ b/.github/workflows/automation.yaml
@@ -20,5 +20,5 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: umangcypher-BH/next-web-app-2
+          repository: umangcypherbh/next
           tags: latest, ${{ github.run_number }}
