update docker file again ok

--- a/.github/workflows/automation.yaml
+++ b/.github/workflows/automation.yaml
@@ -10,8 +10,8 @@ jobs:
       - name: Publish to Github Packages
         uses: docker/build-push-action@v2
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: umangcypher-BH
+          password: Cypher@87
           registry: docker.pkg.github.com
           repository: ${{ github.repository }}/next
           tags: latest, ${{ github.run_number }}
